data/derived/comb/progs/unify/prog6026.ml.out
Characters 88-89:
  let f a x = a ^ sep ^ t in
                        ^
Error: This expression has type 'a list
       but an expression was expected of type string
